Actualizar tailwind de v3 a v4

--- a/assets/source.css
+++ b/assets/source.css
@@ -1,6 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss' layer(base);
+@import 'tailwindcss';
+
+@layer utilities {
+	.cursor-edit {
+		cursor: url("/assets/img/pen.svg"), pointer;
+	}
+}
 
 @layer components {
 	.form-control {
